--- a/config.toml
+++ b/config.toml
@@ -175,7 +175,7 @@ pluralizelisttitles = false
     copyright = "CC BY 3.0 Animalknights.at"
 
     # Format dates with Go's time formatting
-    date_format = "January 2, 2006"
+    date_format = "2. January 2006"
 
     dropdown_mouse_over = true
 
