--- a/config.toml
+++ b/config.toml
@@ -172,7 +172,7 @@ pluralizelisttitles = false
     googleRecaptchaKey = "site_key_for_google_recaptcha"
 
     about_us = "<p>Tierschutzverein Animalhnights. <a href='/about'>Mehr...</a></p>"
-    copyright = "CC BY 3.0 Animalknights.at"
+    copyright = "CC BY-SA 3.0 Tierschutzverein Animalknights.at"
 
     # Format dates with Go's time formatting
     date_format = "2. January 2006"
